--- a/FutureXcel.Api/appsettings.json
+++ b/FutureXcel.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=M-FAYAZ;Database=FutureXcelDb;TrustServerCertificate=True;Trusted_Connection=True;"
+  }
 }
