--- a/FutureXcel.Api/appsettings.json
+++ b/FutureXcel.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=M-FAYAZ;Database=FutureXcelDb;TrustServerCertificate=True;Trusted_Connection=True;"
+    "Myconn": "Server=M-FAYAZ;Database=FutureXcelDb;TrustServerCertificate=True;Trusted_Connection=True;"
   }
 }
